--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ td{
   width: 100px;
   text-align: center;
   vertical-align: middle;
-  font-family: "Comic Sans MS", cursive, sans-serif;
+  font-family: 'Indie Flower', cursive;
   font-size: 70px;
   cursor: pointer;
 }
